--- a/css/style.css
+++ b/css/style.css
@@ -1,160 +1,122 @@
+/*Nav Bar*/
 
-    .tabela {
-        text-align: left;
-    }
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
-    table,
-    th,
-    td {
-        border: 1px solid;
-    }
+.navbar {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    background-color: #544bcf;
+}
+.navp{
+    margin-top: 30px;
+}
+.navLi{
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    color: whitesmoke;
+    text-decoration: none;
+}
+.navA{
+    width: 40px;
+    height: 40px;
+}
 
-    .tabela {
-        display: inline-block;
-        padding: 30px 15px 20px 15px;
-        margin-right: 0vw;
-        text-align: center;
-        border-radius: 30px;
-        font-family: Arial, Helvetica, sans-serif;
-        border-collapse: collapse;
-    }
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding: 20px 25%;
+}
+.logo{
+    cursor: pointer;
+    width: 450px;
+    height: 98px;
+    margin-left: 50px;
+    margin-right: 580px;
+    margin-bottom: 10px;
+}
+.navUnlist{
+    list-style: none;
+    margin-left: 100px;
 
-    .tabela td,
-    .tabela th {
-        border: 1px solid #ddd;
-        padding: 8px;
-    }
+}
+.navUnlist li{
+    display: inline-block;
+    padding: 0px 20px;
 
-    .tabela tr:nth-child(even) {
-        background-color: #f2f2f2;
-    }
+}
 
-    .tabela tr:hover {
-        background-color: #fff;
-    }
+.navUnlist li a {
+    transition: all 0.3s ease;
+}
+.navUnlist li a :hover {
+    transition: all 0.5s ease;
+    border-radius: 18px;
+}
+/*Fim NavBar*/
 
-    .tabela th {
-        padding-top: 12px;
-        padding-bottom: 12px;
-        text-align: left;
-        background-color: #04AA6D;
-        color: white;
-    }
+table, th, td {
+    border: 1px solid;
+}
 
-    button[type=submit] {
-        width: 100%;
-        background-color: #4CAF50;
-        color: white;
-        padding: 14px 20px;
-        margin: 8px 0;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-    }
+.tabela {
+    display: inline-block;
+    padding: 60px 30px 40px 30px;
+    margin-right: 0vw;
+    text-align: center;
+    border-radius: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    border-collapse: collapse;
+}
 
-    button[type=submit]:hover {
-        background-color: #45a049;
-    }
+.tabela td,
+.tabela th {
+    border: 1px solid #ddd;
+    padding: 10px;
+}
 
-    #div_central {
-        width: 1000px;
-        margin: 0 auto;
+.tabela tr:nth-child(even) {
+    background-color: #f2f2f2;
+    transition: all 0.5s ease;
+}
 
-    }
+.tabela tr:hover {
+    background-color: rgba(174, 173, 238, 0.589);
+    transition: all 0.5s ease;
+}
 
-    i {
-        padding: 0px 0px 0px 50px;
+.tabela th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #04AA6D;
+    color: white;
+}
 
-    }
+button[type=submit] {
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 25px 50px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
 
-    div {
-        border: 1px solid;
-    }
+button[type=submit]:hover {
+    background-color: #45a049;
+    border-radius: 20px;
+    transition: all 0.3s ease;
+}
 
-    ---->.header {
+#div_central {
+    padding: 0;
+    width: 1000px;
+    margin-left: 100px;
 
-        background-color: rgba(74, 214, 43, 0.822);
-        width: 100%;
-        height: 12%;
-    }
-
-    .logoif {
-        width: 8%;
-        height: 8%;
-
-    }
-
-    .titleHeader {
-        position: absolute;
-        margin-top: -7%;
-        margin-left: 44%;
-        text-align: center;
-    }
-
-    .content {
-
-        position: absolute;
-        margin-top: 0%;
-        margin-left: 40%;
-
-    }
-
-    .titulo {
-
-        height: 30%;
-    }
-
-    .teste {
-        color: rgb(89, 0, 255);
-    }
-
-    .navbar-border-inf {
-        position: absolute;
-        margin-left: 1100px;
-        margin-top: 40px;
-    }
-
-    .navbar-border-temp {
-        position: absolute;
-        margin-left: 150px;
-        margin-top: 40px;
-    }
-
-    .navbar-border-solo {
-        position: absolute;
-        margin-left: 450px;
-        margin-top: 40px;
-    }
-
-    .navbar-border-graf {
-        position: absolute;
-        margin-left: 710px;
-        margin-top: 40px;
-    }
-
-    .navbar-border-sens {
-        position: absolute;
-        margin-left: 900px;
-        margin-top: 40px;
-    }
-
-    .navbar-border-insta {
-        position: absolute;
-        margin-left: -150px;
-        margin-top: 70px;
-        color: azure;
-    }
-
-    .navbar-border-face {
-        position: absolute;
-        margin-left: -110px;
-        margin-top: 70px;
-        color: azure;
-    }
-
-    .navbar-border-wpp {
-        position: absolute;
-        margin-left: -70px;
-        margin-top: 70px;
-        color: azure;
-    }
+}
