--- a/css/stylepage2.css
+++ b/css/stylepage2.css
@@ -122,44 +122,34 @@ header {
     margin-top: 4%;
     background-color: rgb(109, 165, 201);
     width: 100%;
-    height: 450px;
+    height: 280px;
 }
 .conteiner{
-    top: 35%;
+    top: 28%;
     left: 2%;
     position: absolute;
     display: flex;
 }
 .widget{
-    width: 400px;
-    height: 300px;
+    width: 350px;
+    height: 150px;
     border-radius: 20px;
     background: rgba(299, 299, 299, 0.4);
 }
 
 .widget .left{
+    top: 10px;
     position: absolute;
     left: 0;
     width: 200px;
 }
 .widget .right {
+    top: 10px;
     position: absolute;
     right: 10px;
     width: 200px;
 }
-.temp-icon{
-    width: 35%;
-    margin-bottom: 0;
-    display: block;
-    margin-left: auto;
-    margin-right: 34%;
-}
-.temp-status{
-    color: #fff;
-    text-align: center;
-    margin-top: 10px;
-    font-size: 2em;   
-}
+
 .umi-icon {
     width: 30%;
     margin-bottom: 0;
@@ -168,12 +158,6 @@ header {
     margin-right: auto;
 }
 
-.umi-status {
-    color: #fff;
-    text-align: center;
-    margin-top: 10px;
-    font-size: 2em;
-}
 .titulot{
     margin-top: 25px;
     text-align: center;
@@ -193,28 +177,9 @@ header {
     margin: 5px 10px 5px;
     text-align: center;
     line-height: 100%;
-    font-size: 2em;
 }
-.bottom div span {
-    display: block;
+.widget .bottom div h5 {
+    font-size: 2em;
     color: #fff;
 }
 /*titulo painel 1*/
-.conteiner1 {
-    top: 25%;
-    left: 3%;
-    position: absolute;
-}
-.widgetsens {
-    width: 360px;
-    height: 50px;
-    border-radius: 20px;
-    background: rgba(299, 299, 299, 0.4);
-}
-.top{
-    text-align: center;
-}
-
-
-/* Painel 2*/
-
