--- a/css/stylepage2.css
+++ b/css/stylepage2.css
@@ -15,7 +15,7 @@ body{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: #04AA6D;
+    background-color: rgb(7, 216, 0);
     width: -40px;
 }
 .navp{
@@ -50,7 +50,6 @@ header {
     height: 40%;
     margin-bottom: 4vh;
 }
-
 .navUnlist {
     list-style: none;
 
@@ -82,6 +81,7 @@ header {
     text-align: center;
     font-family: "Montserrat", sans-serif;
     border-collapse: collapse;
+    border-radius: 10px;
 }
 
 .tabela td,
@@ -97,13 +97,13 @@ header {
 .tabela td:hover {
     background-color: #ddd;
     transition: all 0.3s ease;
+    
 }
-
 .tabela th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: #04AA6D;
+    background-color: rgb(7, 216, 0);
     color: white;
 }
 
@@ -116,9 +116,9 @@ header {
     display: flex;
     justify-content: space-between;
     margin-left: 2vh;
-    margin-top: 2vh;
+    margin-top: 3vh;
     margin-right: 2vh;
-    background-color: rgb(78, 143, 184);
+    background-color: rgb(7, 216, 0);
     min-width: 98%;
     height: 280px;
     border-radius: 30px;
@@ -126,7 +126,7 @@ header {
 }
 .conteiner{
     top: 6.5vh;
-    left: 10px;
+    left: 15px;
     position: absolute;
     display: inline-block;
 }
@@ -206,14 +206,76 @@ header {
 
 /*Painel Clima*/
 .bg2{
-    background-color: rgb(78, 143, 184);
+    background-color: rgb(7, 216, 0);
     position: relative;
-    margin-left: 50vh;
+    margin-left: 13%;
     margin-right: 4vh;
     margin-top: 4vh;
-    background-color: rgb(78, 143, 184);
     min-width: 50%;
-    width: 50%;
-    height: 180px;
+    width: 75%;
+    height: 115px;
     border-radius: 30px;
+}
+.conteinerClima{
+    position: absolute;
+    display: inline-block;
+    background-color: rgba(299, 299, 299, 0.4);
+    margin-left: 235px;
+    margin-top: 10px;
+    border-radius: 20px;
+    transition: all 0.3s ease;
+    cursor: default;
+}
+.conteinerUmi{
+    background-color: rgba(299, 299, 299, 0.4);
+    position: absolute;
+    display: inline-block;
+    margin-left: 785px;
+    margin-top: 10px;
+    border-radius: 20px;
+    transition: all 0.3s ease;
+    cursor: default;
+}
+.widgetClima{
+    position: relative;
+    width: 350px;
+    height: 95px;
+}
+.leftClima{
+    position: absolute;
+    margin-left: 5%;
+    margin-top: 6%;
+}
+.rightClima{
+    position: absolute;
+    left: 58%;
+    margin-top: 4%;
+}
+.logoClima{
+    margin-bottom: 3%;
+    width: 30%;
+    height: 30%;
+}
+ span{
+    margin-top: 10%;
+    margin-left: 5%;
+    font-size: 1.8em;
+ }
+.conteinerClima:hover {
+    box-shadow: -1px 1px 30px -10px #000000;
+    transition: all 0.3 ease;
+}
+.conteinerUmi:hover {
+    box-shadow: -1px 1px 30px -10px #000000;
+    transition: all 0.3 ease;
+}
+/*Gráficos*/
+#graficosensor{
+    display: inline-block;
+}
+#graficosensor2{
+    display: block;
+}
+form{
+    float: right;
 }
