--- a/css/stylepage2.css
+++ b/css/stylepage2.css
@@ -282,5 +282,40 @@ iframe{
 /* Responsividade */
 
 @media (min-width:1360px) and (max-height: 768px) {
+        .widget {
+            width: 250px;
+            height: 50px;
+            border-radius: 20px;
+            background: rgba(299, 299, 299, 0.4);
+            transition: all 0.3s ease;
+        }
+        .conteiner {
+            top: 6.5vh;
+            left: 15px;
+            position: absolute;
+            display: inline-block;
+        }
     
+        .conteiner2 {
+            top: 6.5vh;
+            left: 51.5vh;
+            position: absolute;
+            display: inline-block;
+            padding-left: 1vh;
+        }
+    
+        .conteiner3 {
+            top: 6.5vh;
+            left: 103vh;
+            position: absolute;
+            display: inline-block;
+            padding-left: 1vh;
+        }
+    
+        .conteiner4 {
+            top: 6.5vh;
+            left: 154.5vh;
+            position: absolute;
+            display: inline-block;
+        }
 }
