--- a/css/style.css
+++ b/css/style.css
@@ -19,21 +19,6 @@ body {
     width: -40px;
 }
 
-.navp {
-    width: 366px;
-    height: 65px;
-    margin-bottom: 0;
-    margin-top: 5vh;
-}
-
-.navLi {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    color: whitesmoke;
-    text-decoration: none;
-}
-
 .navA {
     width: 40px;
     height: 38px;
@@ -50,7 +35,8 @@ header {
     margin-left: 2%;
     width: 40%;
     height: 40%;
-    margin-bottom: 4vh;
+    margin-bottom: 4.8vh;
+    margin-top: 8px;
 }
 
 .navUnlist {
