--- a/css/stylepage2.css
+++ b/css/stylepage2.css
@@ -170,7 +170,7 @@ header {
 .widget .right {
     top: 10px;
     position: relative;
-    left: 150px;
+    left: 200px;
     width: 200px;
 }
 .widget .bottom{
@@ -181,8 +181,7 @@ header {
 .solo-icon {
     width: 50%;
     margin-bottom: 0;
-    display: block;
-    margin-left: auto;
+    position: absolute;
     margin-right: auto;
     transition: all 0.3s ease;
 }
@@ -281,54 +280,88 @@ iframe{
 
 /* Responsividade */
 
-@media (max-width: 450px) {
-        .widget {
-            width: 250px;
-            height: 100px;
-            border-radius: 20px;
-            background: rgba(299, 299, 299, 0.4);
-            transition: all 0.3s ease;
-        }
-        .conteiner {
-            top: 6.5vh;
-            left: 15px;
-            position: absolute;
-            display: inline-block;
-        }
+@media screen and (max-width: 450px) {
+    .bg{
+        position: relative;
+        display: flex;
+        justify-content: space-between;
+        margin-left: 2vh;
+        margin-top: 3vh;
+        margin-right: 2vh;
+        background-color: rgb(7, 216, 0);
+        min-width: 90%;
+        height: 280px;
+        border-radius: 30px;
     
-        .conteiner2 {
-            top: 6.5vh;
-            left: 30.5vh;
-            position: absolute;
-            display: inline-block;
-            padding-left: 1vh;
-        }
+    }
+    .conteiner{
+        top: 3.5vh;
+        left: 12px;
+        position: absolute;
+        display: inline-block;
+    }
+    .conteiner2 {
+        top: 3.5vh;
+        left: 180px;
+        position: absolute;
+        display: inline-block;
+        padding-left: 1vh;
+    }
+    .conteiner3 {
+        top: 20vh;
+        left: 5px;
+        position: absolute;
+        display: inline-block;
+        padding-left: 1vh;
+    }
+    .conteiner4 {
+        top: 20vh;
+        left: 188px;
+        position: absolute;
+        display: inline-block;
+    }
+    .widget{
+        width: 160px;
+        height: 80px;
+        border-radius: 20px;
+        background: rgba(299, 299, 299, 0.4);
+        transition: all 0.3s ease;
+    }
+    .widget .left{
+        top: 10px;
+        position: absolute;
+        left: 0;
+        width: 100px;
+    }
+    .widget .right {
+        top: 4px;
+        position: relative;
+        left: 90px;
+        width: 200px;
+    }
+    .widget .bottom{
+        bottom: -5px;
+        margin-left: 63%;
+        position: absolute;
+    }
+    .solo-icon {
+        width: 30%;
+        margin-bottom: 0;
+        position: absolute;
+        margin-left: auto;
+        transition: all 0.3s ease;
+    }
+    .titulot{
+        margin-top: 1vh;
+        text-align: center;
+        font-size: 1em;
+        cursor: default;
+        color: rgb(49, 49, 49);
+    }
+    .widget .bottom div h5 {
+        font-size: 1.2em;
+        cursor: default;
+        color: #fff;
+    }
     
-        .conteiner3 {
-            top: 6.5vh;
-            left: 61vh;
-            position: absolute;
-            display: inline-block;
-            padding-left: 1vh;
-        }
-    
-        .conteiner4 {
-            top: 6.5vh;
-            left: 91.5vh;
-            position: absolute;
-            display: inline-block;
-        }
-        .titulot {
-            margin-top: 4vh;
-            text-align: center;
-            font-size: 1.8em;
-            cursor: default;
-            color: rgb(49, 49, 49);
-        }
-
-        .widget .bottom div h5 {
-            font-size: 2em;
-            cursor: default;
-            color: #fff;
-        }
     }
