--- a/css/stylepage2.css
+++ b/css/stylepage2.css
@@ -283,8 +283,6 @@ iframe{
 @media screen and (max-width: 450px) {
     .bg{
         position: relative;
-        display: flex;
-        justify-content: space-between;
         margin-left: 2vh;
         margin-top: 3vh;
         margin-right: 2vh;
@@ -297,14 +295,14 @@ iframe{
         top: 3.5vh;
         left: 12px;
         position: absolute;
-        display: inline-block;
+        float: right;
     }
     .conteiner2 {
         top: 3.5vh;
         left: 180px;
         position: absolute;
-        display: inline-block;
         padding-left: 1vh;
+        float: right;
     }
     .conteiner3 {
         top: 20vh;
