--- a/css/stylepage2.css
+++ b/css/stylepage2.css
@@ -16,7 +16,7 @@ body{
     margin: 0;
     padding: 0;
     background-color: rgb(7, 216, 0);
-    width: -40px;
+
 }
 .navp{
     width: 366px;
@@ -280,69 +280,65 @@ iframe{
 
 /* Responsividade */
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 395px) {
     .bg{
         position: relative;
-        margin-left: 2vh;
+        /*Alterar para deixar responsivo*/width: 100px;
+        /*Alterar para deixar responsivo*/height: 180px;
+        margin-left: 1vh;
         margin-top: 3vh;
-        margin-right: 2vh;
+        margin-right: 1vh;
         background-color: rgb(7, 216, 0);
-        height: 280px;
         border-radius: 30px;
     
     }
     .conteiner{
-        top: 3.5vh;
-        left: 12px;
+        /*Alterar para deixar responsivo*/top: 2.5vh;
+        /*Alterar para deixar responsivo*/left: 12px;
         position: absolute;
-        float: right;
     }
     .conteiner2 {
-        top: 3.5vh;
-        left: 180px;
+        /*Alterar para deixar responsivo*/top: 2.5vh;
+        /*Alterar para deixar responsivo*/left: 140px;
         position: absolute;
         padding-left: 1vh;
-        float: right;
     }
     .conteiner3 {
-        top: 20vh;
-        left: 5px;
+        /*Alterar para deixar responsivo*/top: 15vh;
+        /*Alterar para deixar responsivo*/left: 5px;
         position: absolute;
-        display: inline-block;
-        padding-left: 1vh;
     }
     .conteiner4 {
-        top: 20vh;
-        left: 188px;
+        /*Alterar para deixar responsivo*/top: 15vh;
+        /*Alterar para deixar responsivo*/left: 150px;
         position: absolute;
-        display: inline-block;
+
     }
     .widget{
-        width: 160px;
-        height: 80px;
-        border-radius: 20px;
+        /*Alterar para deixar responsivo*/width: 120px;
+        /*Alterar para deixar responsivo*/height: 60px;
+        border-radius: 10px;
         background: rgba(299, 299, 299, 0.4);
         transition: all 0.3s ease;
     }
     .widget .left{
-        top: 10px;
+        /*Alterar para deixar responsivo*/top: 10px;
         position: absolute;
-        left: 0;
-        width: 100px;
+        /*Alterar para deixar responsivo*/width: 80px;
     }
     .widget .right {
-        top: 4px;
+       /*Alterar para deixar responsivo*/top: 4px;
         position: relative;
-        left: 90px;
-        width: 200px;
+        left: 70px;
+        /*Alterar para deixar responsivo*/width: 200px;
     }
     .widget .bottom{
-        bottom: -5px;
-        margin-left: 63%;
+        /*Alterar para deixar responsivo*/bottom: -5px;
+        /*Alterar para deixar responsivo*/margin-left: 70px;
         position: absolute;
     }
     .solo-icon {
-        width: 30%;
+        /*Alterar para deixar responsivo*/width: 20%;
         margin-bottom: 0;
         position: absolute;
         margin-left: auto;
@@ -351,12 +347,12 @@ iframe{
     .titulot{
         margin-top: 1vh;
         text-align: center;
-        font-size: 1em;
+        /*Alterar para deixar responsivo*/font-size: .8em;
         cursor: default;
         color: rgb(49, 49, 49);
     }
     .widget .bottom div h5 {
-        font-size: 1.2em;
+        /*Alterar para deixar responsivo*/font-size: .9em;
         cursor: default;
         color: #fff;
     }
