--- a/css/stylepage2.css
+++ b/css/stylepage2.css
@@ -420,3 +420,147 @@ iframe{
         transition: all 0.3 ease;
     }
     }
+
+    @media  screen and (max-width: 1325px) {
+    .bg{
+        position: relative;
+        /*Alterar para deixar responsivo*/width: 1200px;
+        /*Alterar para deixar responsivo*/height: 130px;
+        margin-left: 10vh;
+        margin-top: 3vh;
+        margin-right: 1vh;
+        background-color: rgb(7, 216, 0);
+        border-radius: 30px;
+    }
+    .conteiner{
+        /*Alterar para deixar responsivo*/top: 3.5vh;
+        /*Alterar para deixar responsivo*/left: 140px;
+        position: absolute;
+    }
+    .conteiner2 {
+        /*Alterar para deixar responsivo*/top: 3.5vh;
+        /*Alterar para deixar responsivo*/left: 390px;
+        position: absolute;
+    }
+    .conteiner3 {
+        /*Alterar para deixar responsivo*/top: 3.5vh;
+        /*Alterar para deixar responsivo*/left: 640px;
+        position: absolute;
+    }
+    .conteiner4 {
+        /*Alterar para deixar responsivo*/top: 3.5vh;
+        /*Alterar para deixar responsivo*/left: 890px;
+        position: absolute;
+
+    }
+    .widget{
+        /*Alterar para deixar responsivo*/width: 165px;
+        /*Alterar para deixar responsivo*/height: 80px;
+        border-radius: 10px;
+        background: rgba(299, 299, 299, 0.4);
+        transition: all 0.3s ease;
+    }
+    .widget .left{
+        /*Alterar para deixar responsivo*/top: 10px;
+        position: absolute;
+        /*Alterar para deixar responsivo*/width: 80px;
+    }
+    .widget .right {
+       /*Alterar para deixar responsivo*/top: 4px;
+        position: relative;
+        /*Alterar para deixar responsivo*/left: 100px;
+        /*Alterar para deixar responsivo*/width: 200px;
+    }
+    .widget .bottom{
+        /*Alterar para deixar responsivo*/bottom: -8px;
+        /*Alterar para deixar responsivo*/margin-left: 110px;
+        position: absolute;
+    }
+    .solo-icon {
+        /*Alterar para deixar responsivo*/width: 28%;
+        margin-bottom: 0;
+        position: absolute;
+        margin-left: auto;
+        transition: all 0.3s ease;
+    }
+    .titulot{
+        margin-top: 1vh;
+        text-align: center;
+        /*Alterar para deixar responsivo*/font-size: 1.2em;
+        cursor: default;
+        color: rgb(49, 49, 49);
+    }
+    .widget .bottom div h5 {
+        /*Alterar para deixar responsivo*/font-size: 1.3em;
+        cursor: default;
+        color: #fff;
+    }
+
+    /* Responsividade Climaticos */
+
+    .bg2{
+        background-color: rgb(7, 216, 0);
+        position: relative;
+        /*Alterar para deixar responsivo*/ margin-left: 10vh;
+        margin-top: 4vh;
+        /*Alterar para deixar responsivo*/ width: 1200px;
+        /*Alterar para deixar responsivo*/ height: 100px;
+        border-radius: 30px;
+    }
+    .conteinerClima{
+        position: absolute;
+        display: inline-block;
+        background-color: rgba(299, 299, 299, 0.4);
+        /*Alterar para deixar responsivo*/ margin-left: 380px;
+        /*Alterar para deixar responsivo*/ margin-top: 2.8vh;
+        border-radius: 15px;
+        transition: all 0.3s ease;
+        cursor: default;
+    }
+    .conteinerUmi{
+        background-color: rgba(299, 299, 299, 0.4);
+        position: absolute;
+        display: inline-block;
+        /*Alterar para deixar responsivo*/ margin-left: 630px;
+        /*Alterar para deixar responsivo*/margin-top: 2.8vh;
+        border-radius: 15px;
+        transition: all 0.3s ease;
+        cursor: default;
+    }
+    .widgetClima{
+        position: relative;
+        /*Alterar para deixar responsivo*/ width: 200px;
+        /*Alterar para deixar responsivo*/ height: 65px;
+    }
+    .leftClima{
+        position: absolute;
+        margin-left: 5%;
+        margin-top: 8%;
+    }
+    .leftClima h3{
+        /*Alterar para deixar responsivo*/ font-size: 1em;
+    }
+    .rightClima{
+        position: absolute;
+        left: 58%;
+        margin-top: 7%;
+    }
+    .logoClima{
+        margin-bottom: 3%;
+        width: 33%;
+        height: 30%;
+    }
+     span{
+        margin-top: 10%;
+        margin-left: 5%;
+       /*Alterar para deixar responsivo*/ font-size: 1.1em;
+     }
+    .conteinerClima:hover {
+        box-shadow: -1px 1px 30px -10px #000000;
+        transition: all 0.3 ease;
+    }
+    .conteinerUmi:hover {
+        box-shadow: -1px 1px 30px -10px #000000;
+        transition: all 0.3 ease;
+    }
+}
