--- a/css/stylepage2.css
+++ b/css/stylepage2.css
@@ -97,7 +97,7 @@ header {
     margin-top: 3vh;
     margin-right: 2vh;
     background-color: rgb(7, 216, 0);
-    height: 280px;
+    height: 270px;
     border-radius: 30px;
 
 }
@@ -182,11 +182,10 @@ header {
 .bg2{
     background-color: rgb(7, 216, 0);
     position: relative;
-    margin-left: 13%;
-    margin-right: 4vh;
+    /*Alterar para deixar responsivo*/ margin-left: 10vh;
     margin-top: 4vh;
-    width: 75%;
-    height: 115px;
+    /*Alterar para deixar responsivo*/ width: 1200px;
+    /*Alterar para deixar responsivo*/ height: 100px;
     border-radius: 30px;
 }
 .conteinerClima{
