--- a/css/stylepage2.css
+++ b/css/stylepage2.css
@@ -91,12 +91,11 @@ header {
 
 .bg{
     position: relative;
-    display: flex;
-    justify-content: space-between;
     margin-left: 2vh;
     margin-top: 3vh;
     margin-right: 2vh;
     background-color: rgb(7, 216, 0);
+    width: 1825px;
     height: 270px;
     border-radius: 30px;
 
@@ -182,18 +181,18 @@ header {
 .bg2{
     background-color: rgb(7, 216, 0);
     position: relative;
-    /*Alterar para deixar responsivo*/ margin-left: 10vh;
+    margin-left: 2vh;
     margin-top: 4vh;
-    /*Alterar para deixar responsivo*/ width: 1200px;
-    /*Alterar para deixar responsivo*/ height: 100px;
+    width: 1825px;
+    height: 150px;
     border-radius: 30px;
 }
 .conteinerClima{
     position: absolute;
     display: inline-block;
     background-color: rgba(299, 299, 299, 0.4);
-    margin-left: 235px;
-    margin-top: 10px;
+    margin-left: 480px;
+    margin-top: 25px;
     border-radius: 20px;
     transition: all 0.3s ease;
     cursor: default;
@@ -202,8 +201,9 @@ header {
     background-color: rgba(299, 299, 299, 0.4);
     position: absolute;
     display: inline-block;
-    margin-left: 785px;
-    margin-top: 10px;
+    right: 20px;
+    margin-right: 485px;
+    margin-top: 25px;
     border-radius: 20px;
     transition: all 0.3s ease;
     cursor: default;
@@ -344,7 +344,7 @@ iframe{
         position: absolute;
         display: inline-block;
         background-color: rgba(299, 299, 299, 0.4);
-        /*Alterar para deixar responsivo*/ margin-left: 380px;
+        /*Alterar para deixar responsivo*/ margin-left: 373px;
         /*Alterar para deixar responsivo*/ margin-top: 2.8vh;
         border-radius: 15px;
         transition: all 0.3s ease;
@@ -354,7 +354,7 @@ iframe{
         background-color: rgba(299, 299, 299, 0.4);
         position: absolute;
         display: inline-block;
-        /*Alterar para deixar responsivo*/ margin-left: 630px;
+        /*Alterar para deixar responsivo*/ margin-right: 358px;
         /*Alterar para deixar responsivo*/margin-top: 2.8vh;
         border-radius: 15px;
         transition: all 0.3s ease;
@@ -407,7 +407,7 @@ iframe{
 }
 
 
-        @media screen and (max-width: 395px) {
+        @media screen and (max-width: 401px) {
             .bg{
                 position: relative;
                 /*Alterar para deixar responsivo*/width: 360px;
@@ -508,7 +508,7 @@ iframe{
                 background-color: rgba(299, 299, 299, 0.4);
                 position: absolute;
                 display: inline-block;
-                /*Alterar para deixar responsivo*/ margin-left: 190px;
+                /*Alterar para deixar responsivo*/ margin-right: -5px;
                 /*Alterar para deixar responsivo*/margin-top: 14px;
                 border-radius: 20px;
                 transition: all 0.3s ease;
