--- a/css/style.css
+++ b/css/style.css
@@ -67,12 +67,10 @@ table, th, td {
 
 .tabela {
     display: inline-block;
-    padding: 4% 3% 4% 3%;
-    margin-right: 0vw;
+    padding: 3% 2% 3% 2%;
     text-align: center;
     border-radius: 30px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 22px;
+    font-size: 20px;
     border-collapse: collapse;
     border-color: rgb(7, 216, 0);
     color: rgb(0, 0, 0);
@@ -127,4 +125,11 @@ button[type=submit]:hover {
     margin-left: 100px;
 
 }
-/*Fim da tabela
+/*Fim da tabela*/
+
+@media screen and (max-width: 1325px){
+
+}
+@media screen and (max-width: 401px){
+    
+}
