--- a/css/stylepage2.css
+++ b/css/stylepage2.css
@@ -9,8 +9,9 @@ body{
     align-items: center;
     min-height: 100vh;
     font-family: "Montserrat", sans-serif;
+    overflow-x: hidden;
 }
-   
+
 header {
     width: 100%;
     margin: 0;
