--- a/css/iframe.css
+++ b/css/iframe.css
@@ -1,9 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 body{
+    overflow: hidden;
     font-family: "Montserrat", sans-serif;
 }
-
-
 
 .conteiner{
     width: 140px;
